--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl:
+baseurl: ""
 title: "Lettuce Be Cereal"
 subtitle:
 author: joao eira
@@ -24,3 +24,4 @@ transfer:
   settings: -av
   source: _site/
   destination: ~/Git/clayh53.github.com/
+twitter_username: joaoeira
