added border-left to blockquotes and increased their font size. Moreover, changed code of header so that it is possible to sort its contents based on a weight attribute. This is used to have the archive page, now enabled, on the rightmost position

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: ""
 title: "Lettuce Be Cereal"
 subtitle:
-author: joao eira
+author: João Eira
 simple_search: http://google.com/search
 description: ""
 title_image: "http://www.lettucebecereal.com/assets/img/twitter-card.jpeg"
